# MEDHA-DIARY

./: pyproject.toml  requirements.txt
app/: auth.py  main.py
app/routers/: astro.py  chat.py  ingest.py  memories.py  payment.py  people.py  plan.py  social.py
app/service/: embeddings.py  rag.py  vector_store.py
