[project]
name = "medha-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "google-genai>=2.8.0",
    "groq>=1.4.0",
    "httpx>=0.28.1",
    "langchain-google-genai>=4.2.5",
    "langchain-text-splitters>=1.1.2",
    "pinecone>=9.1.0",
    "pyjwt==2.12.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "supabase>=2.31.0",
    "uvicorn>=0.49.0",
]
